--- a/captcha/captcha_avec_notes.html
+++ b/captcha/captcha_avec_notes.html
@@ -76,5 +76,19 @@
 
 			captchaCF2M(6)  //il y aura 6 caractères à mon captcha
 		</script>
+
+Les étapes
+Prendre tous les éléments de l'alphabet et M et Min dans un array.
+On faisait une boucle + un math random pour tirer au hasard plusieurs caractères
+Qd o a tiré une lettre au hasard, la boucle va permettre de récupérer d’autres caractères
+On va les ranger dans un autre array (getElementFromArray
+random int nous permettait de….
+
+GenerateCaptcha va vider le précédent (s’il y en a un) pour un générer un nouveau
+C’est une chaine de caractères vide
+Le résultat de getElementFromArray 
+
+La boucle va permettre de tirer un autre captcha
+
 	</body>
 </html>
